# astar

./: .gitignore  CMakeLists.txt  README.md
Zoey/: head.dae  head.mtl  human.gv  human.urdf  l_foot.dae  l_forearm.dae  l_forearm.mtl  l_hand.dae  l_lowerleg.dae  l_lupperleg.dae  l_lupperleg.mtl  l_upperarm.dae  pelvis.dae  positions.asv  positions.m  r_foot.dae  r_forearm.dae  r_hand.dae  r_hand.mtl  r_lowerleg.dae  r_lowerleg.mtl  r_upperarm.dae  r_upperarm.mtl  r_upperleg.dae  r_upperleg.mtl  torso.dae  zombi.txt
Zoey/centered/: head.dae  l_foot.dae  l_forearm.dae  l_forearm.mtl  l_hand.dae  l_lowerleg.dae  l_lupperleg.dae  l_upperarm.dae  pelvis.dae  pelvisdae.dae  r_foot.dae  r_forearm.dae  r_hand.dae  r_lowerleg.dae  r_upperarm.dae  r_upperleg.dae  torso.dae  torso.mtl
benchmarks/: between.txt  between1000.scen  between10000.scen  chair.txt  chair1000.scen  chair10000.scen  climbing.txt~  climbing10000.scen  climbing10000.scen~  climbingspider.scen  climbingspider.txt  pentour.scen  pentour.txt  truck_front.scen~  truck_front1000.scen  truck_front10000.scen  truck_front100000.scen  truck_spider.scen  truck_spider.scen~  truck_spider.txt  truck_up.txt  truck_up.txt~
blender/: abstract.blend  abstract.blend1  chair.blend  chair.blend1  chair.bvh  chair_abs.blend  chair_abs.blend1  chair_abs.blend2  chair_bad.bvh  chair_contact.blend  chair_mieux.bvh  climb.blend  climb.blend1  climb.bvh  dodge.blend  dodge.blend1  dodge.bvh  dodge_reverse.blend  dodge_reverse.blend1  fullblend.blend  graspspider.blend  graspspider.blend1  hand.blend  hand.blend1  handtour.blend  handtour.blend1  humanoid.blend  humanoid.blend1  pen.blend  pen.blend1  race_tight.mtl  rom.blend  rom.blend1  spider.blend  spider.blend1  spiderclimb.blend  truck.blend  truck.blend1  truck_abs.blend  truck_abs.blend1  (+4 more)
cmake/: FindPQP.cmake
doc/: .gitignore  doxygenconf
humandes/: jointconstraints.txt
humandes/fullscenarios/: between.scen  climbing.scen  fullscenario.scen  generate.scen  race.scen  race2.scen  race_climb.scen  rocketbox.scen  truck.scen  truck_front.scen  tunnel.scen  zoey.scen
include/astar/: AStar.h  Graph.h
include/kinematics/: Pi.h  joint.h  joint_io.h  joint_io_rtql8.h  joint_io_urdf.h
include/planner/: PRM.h
include/spline/: b_spline.h  curve_abc.h
rami/model/: character.urdf  driving_3.bvh  human_rami.urdf  human_rami.urdf~  human_rami_ld.urdf  jointconstraints.txt  jointconstraints.txt~
rami/scenarios/: rami.scen  rami.scen.orig  rami.scen~  rami.txt  rami_old_mat.scen  statestest.scen  statestest.txt
rami/scenes/: chair.mtl
rami/states/: test.states
rocketboxmale/: between.txt  cenglobedchair.mtl  cenglobedt.mtl  cenglobing.mtl  climbing.txt  human.urdf  jointconstraints.txt  race.txt  race2.txt  race_climb.txt  rocketbox_male.urdf  roms.mtl  truck.txt  tunnel.txt  zombi.txt
spider/: genall.m  skeleton.blend  skeleton.blend1  spider.blend  spider.blend1  spider.urdf  spider_detached.blend  spider_detached.blend1  spiderroms.blend  spiderroms.blend1  truck_plein.blend
spider/mesh/: MiddleRightLimb.mtl  MiddleRightLowerLimb.mtl
spider/model/: hand.urdf  jointconstraints.txt  jointconstraints.txt~  rocketbox_male.gv  (+4 more)
src/: CMakeLists.txt~
src/bvh_to_urdf/: CMakeLists.txt  create_obj_box.cpp  main.cpp
src/equilibrium/: CMakeLists.txt  CMakeLists.txt~  DynamicStability.cpp  DynamicStability.h  Test.cpp  Test.h
src/prm/: CMakeLists.txt  Generator.cpp  Generator.h  LocalPlanner.cpp  LocalPlanner.h  Model.h  Scenario.cpp  Scenario.h  SimplePRM.cpp  SimplePRM.h  WorldABC.cpp  WorldABC.h
src/prmpath/: CMakeLists.txt  CompleteScenario.cpp  CompleteScenario.h  Jacobian.cpp  Jacobian.h  JointConstraint.cpp  JointConstraint.h  PostureSelection.cpp  PostureSelection.h  PostureSelectiontest.cpp  ROM.cpp  ROM.h  Robot.cpp  Robot.h
src/prmpath/Export/: BVHExporter.cpp  BVHExporter.h  BVHExporterSaveeuler.cpp  BVHFileHandler.cpp  BVHFileHandler.h  Exporter.cpp  Exporter.h  ITOMPExporter.cpp  ITOMPExporter.h
src/prmpath/animation/: StateInterpolation.cpp  StateInterpolation.h
src/prmpath/ik/: CMakeLists.txt~  ForceManipulabilityConstraint.cpp  ForceManipulabilityConstraint.h  IKSolver.cpp  IKSolver.h  ObstacleAvoidanceConstraint.cpp  PartialDerivativeConstraint.h  VectorAlignmentConstraint.cpp  VectorAlignmentConstraint.h
src/prmpath/sampling/: Sample.cpp  Sample.h
src/prmpath/smoothing/: smooth.cpp  smooth.h
src/tests/equilibrium/: CMakeLists.txt  Main.cpp  Test.cpp
src/tests/prmcollisiontests/: CMakeLists.txt  Main.cpp  PRMTest.cpp  PRMTest.h
tests/: dodge.txt  entrance.path  front.prm  itomp.path  test.bvh  test.path  testSerialization.txt  testSerialization2.txt  testscenario.txt  testscenarioload.txt  zombi.txt
(+111 files in other folders)
